# logviewer

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
logviewer/: main.py
logviewer-app/: Chart.yaml  values.yaml
logviewer-app/templates/: deployment.yaml  service.yaml
logviewer-app/templates/tests/: test-connection.yaml
